@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/time.c: allow plugins to override the usual move process.
+Nicolas Weeger 2007-05-24
+
 Add party rejoin at login. New command 'party_rejoin' to control the behaviour.
  include/player.h sproto.h
  server/c_party.c commands.c login.c player.c
